# atd-mcl-baselines

./: .gitignore  .gitmodules  LICENSE  README.md
cr_mluke/: README.md  pyproject.toml
data/agreement/: 20230519_step2b_annotators_disagreement_judged.txt  url_map_step2b.txt
data/label_conversion_map/: label_map_irex_to_atd-mcl.json
data_preprocessor/: README.md
data_preprocessor/ginza_tools/ginza_tools/: convert_ginza_conllu_to_tsv.py
data_preprocessor/kwja_tools/: pyproject.toml
data_preprocessor/mluke_tools/: pyproject.toml
data_preprocessor/mluke_tools/mluke_tools/: convert_atd_to_cr_jsonl.py  convert_atd_to_mr_jsonl.py  convert_cr_jsonl_to_atd.py  convert_mr_jsonl_to_atd.py
eacl2024_experiments/: .gitignore  CR_calc_IAA.sh  CR_kwja_eval.sh  CR_kwja_run.sh  CR_mluke_eval.sh  CR_mluke_run1_preproc.sh  CR_mluke_run2_train.sh  CR_mluke_run3_postproc.sh  CR_rule_eval.sh  CR_rule_run.sh  ED_bert_eval.sh  ED_bert_run.sh  ED_calc_IAA.sh  ED_rule_eval.sh  ED_rule_run.sh  MR_calc_IAA.sh  MR_ginza_eval.sh  MR_ginza_run.sh  MR_kwja_eval.sh  MR_kwja_run.sh  MR_mluke_eval.sh  MR_mluke_run1_preproc.sh  MR_mluke_run2_train.sh  MR_mluke_run3_postproc.sh  MR_spacy_eval.sh  MR_spacy_patch.sh  MR_spacy_run1_preproc.sh  MR_spacy_run2_train.sh  MR_spacy_run3_decode.sh  README.md
ed_bert/: README.md  README_text_to_vec.md  bert_tokenizers.py  convert_extnames_jsonl_to_ids.py  convert_extnames_jsonl_to_names.py  convert_extnames_txt_to_jsonl.py  convert_json_format_for_eval.py  convert_text_to_vectors.py  ed_disambiguate_entities.py  ed_select_entity_names.py  pyproject.toml  vectorizers.py
eval_scripts/: LICENSE  README.md  pyproject.toml
eval_scripts/eval_scripts/: aggregate_practically_same_URLs_for_IAA.py  constants.py  coref_evaluator.py  coref_metrics.py  data_io.py  ed_evaluator_for_entries.py  ed_evaluator_for_groups.py  entity_disambiguation_database.py  ner_evaluator.py  util.py
mr_mluke/: README.md  pyproject.toml
rule_based/: README.md  pyproject.toml
rule_based/rule_based/: coreference_resolver.py  entity_disambiguator.py
(+3 files in other folders)
