[tool.poetry]
name = "ed-bert"
version = "0.1.0"
description = ""
authors = ["ouchi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
logzero = "^1.7.0"
numpy = "^1.26.3"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
transformers = "^4.36.0"
jsonlines = "^3.1.0"
h5py = "^3.8.0"
torch = "^2.0.1"
fugashi = "^1.2.1"
ipadic = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
